--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,5 +11,7 @@
  * It is generally better to create a new file per style scope.
  *
  */
-
+@import "font-awesome";
 @import "bootstrap";
+$body-bg: #fafafa;
+$body-color: #111;
