--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,12 @@
   </head>
   <body>
     <%= render "shared/navbar" %>
+    <% flash.each do |key, value| %>
+      <% classname = flash_class(key) %>
+      <div class="<%=  classname %>">
+            <%= value %>
+      </div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
