--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -26,7 +26,7 @@
   <div id="devise"><i>(e' necessario specificare l'attuale password per modificare)</i>
   <%= f.password_field :current_password, id: "devise_field", label: "Password attuale" %></div>
 
-  <div id="devise_field"><%= f.submit "Salva",:class => "btn btn-success", id: "devise" %>
+  <div id="devise_field"><%= f.button "Save",:class => "btn btn-success", id: "devise", method: 'patch',data: {disable_with: "<i class='fa fa-spinner'></i>Saving..."} %>
 <%= link_to "Indietro", :back , :class => "btn btn-default" %> </div>
 <% end %>
   </div> <!-- close login box -->
